firmware/defmt-test/macros/tests/ui/init-has-should-error-macro.stderr
error: `#[should_error]` is not allowed on the `#[init]` function
 --> tests/ui/init-has-should-error-macro.rs:7:8
  |
7 |     fn init() {}
  |        ^^^^
