firmware/defmt-test/macros/tests/ui/init-has-should-error-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[init]
    #[should_error]
    fn init() {}
}
